# Vide

./: Cargo.toml  rustfmt.toml
crates/vide/: Cargo.toml
crates/vide-export/: Cargo.toml
crates/vide-export/src/: lib.rs  quick_export.rs
crates/vide/src/: api.rs  app.rs  clip.rs  effect.rs  io.rs  lib.rs  render.rs
crates/vide/src/api/: animation.rs  color.rs  instance.rs  instanced_mesh.rs  mesh.rs  rect.rs  rect.wgsl  transform.rs  vertex.rs  video.rs
crates/vide/src/clip/: rect.rs
crates/vide_export/: Cargo.toml
crates/vide_ffmpeg/src/: lib.rs  quick_export.rs
crates/vide_lib/: Cargo.toml
crates/vide_lib/src/: clip.rs  effect.rs  lib.rs  render.rs
crates/vide_lib/src/api/: animation.rs  color.rs  instanced_mesh.rs  mesh.rs  mod.rs  rect.rs  shader.rs  video.rs
examples/animation/: Cargo.toml
examples/animation/src/: main.rs
examples/audio_visualizer/: Cargo.toml
examples/audio_visualizer/src/: main.rs
examples/easing/: Cargo.toml
examples/easing/src/: main.rs
vide/: Cargo.toml
vide/src/: lib.rs
