[package]
name = "vide-export"
version = "0.1.0"
edition = "2021"

[dependencies]
vide = { workspace = true, default-features = false }
# ac-ffmpeg = "0.18.2"
objc2-av-foundation = { version = "0.3.0", features = [
  "objc2-core-media",
  "objc2-core-video",
] }
block2 = "0.6.0"
objc2-core-media = "0.3.0"
objc2-core-video = "0.3.0"
objc2 = { version = "0.6.0", features = ["exception"] }
objc2-foundation = "0.3.0"
