[package]
name = "vide_lib"
version = "0.1.0"
edition = "2021"


[features]
default = []
preview = ["winit"]


[dependencies]
winit = { version = "0.29", optional = true }
futures-intrusive = "0.5.0"
bytemuck = { version = "1.9.1", features = ["derive"] }
pollster = "0.2.5"
cgmath = "0.18.0"
paste = "1.0.7"
wgpu = "24.0.1"
webm = "1.0.2"
log = "0.4.17"
